fix(css): date-picker z-index

--- a/scss/os/_overrides_jqueryui.scss
+++ b/scss/os/_overrides_jqueryui.scss
@@ -198,3 +198,7 @@ table.ui-datepicker-calendar a.ui-state-default.ui-state-highlight {
 .ui-draggable-dragging .ui-draggable-handle {
   @include grabbing-cursor();
 }
+
+.ui-datepicker{
+  z-index: $u-zindex-base !important;
+}
